ros2_ws/log/build_2020-10-10_23-08-04/atl_blockly_ide_py_pkg/stdout_stderr.log
running egg_info
writing ../../build/atl_blockly_ide_py_pkg/atl_blockly_ide_py_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/atl_blockly_ide_py_pkg/atl_blockly_ide_py_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/atl_blockly_ide_py_pkg/atl_blockly_ide_py_pkg.egg-info/entry_points.txt
writing requirements to ../../build/atl_blockly_ide_py_pkg/atl_blockly_ide_py_pkg.egg-info/requires.txt
writing top-level names to ../../build/atl_blockly_ide_py_pkg/atl_blockly_ide_py_pkg.egg-info/top_level.txt
reading manifest file '../../build/atl_blockly_ide_py_pkg/atl_blockly_ide_py_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/atl_blockly_ide_py_pkg/atl_blockly_ide_py_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying atl_blockly_ide_py_pkg/atl_ide_webappserver.py -> /home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/build/atl_blockly_ide_py_pkg/build/lib/atl_blockly_ide_py_pkg
running install
running install_lib
copying /home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/build/atl_blockly_ide_py_pkg/build/lib/atl_blockly_ide_py_pkg/atl_ide_webappserver.py -> /home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/install/atl_blockly_ide_py_pkg/lib/python3.8/site-packages/atl_blockly_ide_py_pkg
byte-compiling /home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/install/atl_blockly_ide_py_pkg/lib/python3.8/site-packages/atl_blockly_ide_py_pkg/atl_ide_webappserver.py to atl_ide_webappserver.cpython-38.pyc
  File "/home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/install/atl_blockly_ide_py_pkg/lib/python3.8/site-packages/atl_blockly_ide_py_pkg/atl_ide_webappserver.py", line 40
    (r'/()',ATLHomeHandler) , '../../../../../../../webapp_root')
                                                                ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 39

running install_data
running install_egg_info
removing '/home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/install/atl_blockly_ide_py_pkg/lib/python3.8/site-packages/atl_blockly_ide_py_pkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/atl_blockly_ide_py_pkg/atl_blockly_ide_py_pkg.egg-info to /home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/install/atl_blockly_ide_py_pkg/lib/python3.8/site-packages/atl_blockly_ide_py_pkg-0.0.0-py3.8.egg-info
running install_scripts
Installing atl_ide_webappserver script to /home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/install/atl_blockly_ide_py_pkg/lib/atl_blockly_ide_py_pkg
writing list of installed files to '/home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/build/atl_blockly_ide_py_pkg/install.log'
